# async_arch_course

./: .gitignore  README.md
2_week/auth/: pyproject.toml
2_week/auth/app/api/: base_deps.py  exceptions.py
2_week/auth/app/api/user_account/: deps.py  serializers.py  views.py
2_week/auth/app/api/users/: deps.py  views.py
2_week/auth/app/core/user_account/: factories.py  models.py  repositories.py  services.py
2_week/auth/app/core/users/: models.py  repositories.py  services.py
2_week/auth/docker/scripts/: docker-entrypoint.sh
2_week/auth/settings/: .env.template  config.py
2_week/auth/tests/: docker-compose.local.yml  factories.py
2_week/task_manager/: .dockerignore  docker-compose.local.yml
2_week/task_manager/app/: main.py
2_week/task_manager/app/api/: __init__.py
2_week/task_manager/app/api/system/: views.py
2_week/task_manager/app/core/tasks/: models.py  services.py
2_week/task_manager/settings/: .env.local.test
2_week/task_manager/tests/integration/: conftest.py
final_project/: async_course.postman_collection.json  docker-compose.yml
final_project/accounting/: .pre-commit-config.yaml  cron_main.py  docker-compose.local.yml  event_consumer_main.py  main.py  mypy.ini  pyproject.toml
final_project/accounting/app/: database.py  emails.py  log_handler.py  main.py
final_project/accounting/app/api/: __init__.py  base_deps.py
final_project/accounting/app/api/accounts/: serializers.py  views.py
final_project/accounting/app/api/analytics/: serializers.py  views.py
final_project/accounting/app/core/accounts/: constants.py  models.py  repositories.py  services.py
final_project/accounting/app/core/analytics/: repositories.py  services.py
final_project/accounting/settings/: .env.template
final_project/auth/: docker-compose.local.yml  main.py  pyproject.toml  setup.cfg
final_project/auth/app/: database.py  main.py
final_project/auth/app/api/: __init__.py
final_project/auth/app/api/users/: deps.py  serializers.py  views.py
final_project/auth/app/core/users/: models.py  repositories.py  services.py
final_project/auth/settings/: .env.template  config.py
final_project/auth/tests/: factories.py
final_project/auth/tests/integration/: test_system.py
final_project/task_manager/: .gitignore  Dockerfile  docker-compose.local.yml  event_consumer_main.py  main.py  pyproject.toml
final_project/task_manager/app/: main.py
final_project/task_manager/app/api/: __init__.py  base_deps.py  base_schemas.py
final_project/task_manager/app/api/events/: consumers.py
final_project/task_manager/app/api/rest/: __init__.py  permissions.py
final_project/task_manager/app/api/rest/tasks/: deps.py  views.py
final_project/task_manager/app/api/tasks/: consumers.py  deps.py  serializers.py  views.py  websockets.py
final_project/task_manager/app/core/tasks/: models.py  repositories.py  services.py
final_project/task_manager/app/event_consumer/: main.py
final_project/task_manager/settings/: .env.template  config.py
